fixed column gap in panel-header

--- a/src/Panel/style.css
+++ b/src/Panel/style.css
@@ -10,7 +10,7 @@
 .ola_panel-header {
     display: grid;
     grid-template-areas: "title" "intro";
-    grid-column-gap: var(--size-6);
+    grid-column-gap: var(--inner-gap);
 
     &.has-extra {
         grid-template-areas: "title extra" "intro extra";
